# itcoin-pcn-simulator

./: .gitignore  CMakeLists.txt  README.md
experiments/: Makefile
experiments/2024_COMCOM/: .gitignore  COMCOM24.ipynb  COMCOM24.py  PCN_load.txt  PCN_model_params.json  generate_topology.py  run_experiments.py  search-full-simulations.sh  utils.py
experiments/2024_COMCOM/results/: compress.sh  uncompress.sh
experiments/2024_COMCOM/results/exp-1/SF_PCN/: results.csv
experiments/2024_COMCOM/results/exp-1/SF_PCN/0.0018-FULL/seed_13/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SF_PCN/0.0018-FULL/seed_23/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SF_PCN/0.0018-FULL/seed_42/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SF_PCN/0.0018-FULL/seed_45/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SF_PCN/0.0018-FULL/seed_7/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SF_PCN/0.01-FULL/seed_13/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SF_PCN/0.01-FULL/seed_23/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SF_PCN/0.01-FULL/seed_42/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SF_PCN/0.01-FULL/seed_45/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SF_PCN/0.01-FULL/seed_7/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SF_PCN/2d28d34db687/seed_13/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SF_PCN/2d28d34db687/seed_23/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SF_PCN/2d28d34db687/seed_42/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SF_PCN/2d28d34db687/seed_45/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SF_PCN/2d28d34db687/seed_7/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SF_PCN/fc916ef8d613/seed_13/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SF_PCN/fc916ef8d613/seed_23/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SF_PCN/fc916ef8d613/seed_42/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SF_PCN/fc916ef8d613/seed_45/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SF_PCN/fc916ef8d613/seed_7/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SH_PCN/0.0018-FULL/seed_13/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SH_PCN/0.0018-FULL/seed_23/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SH_PCN/0.0018-FULL/seed_42/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SH_PCN/0.0018-FULL/seed_45/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SH_PCN/0.0018-FULL/seed_7/: blockchain_output_0.csv
experiments/2024_COMCOM/results/exp-1/SH_PCN/fc916ef8d613/seed_13/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SH_PCN/fc916ef8d613/seed_23/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SH_PCN/fc916ef8d613/seed_42/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SH_PCN/fc916ef8d613/seed_45/: simulation_log.txt
experiments/2024_COMCOM/results/exp-1/SH_PCN/fc916ef8d613/seed_7/: simulation_log.txt
experiments/2024_COMCOM/results/exp-2/SF_PCN/: results.csv
experiments/2024_COMCOM/results/exp-2/SH_PCN/: results.csv
experiments/2024_COMCOM/results/exp-31/SF_PCN/: results.csv
experiments/2024_COMCOM/results/exp-31/SH_PCN/: results.csv
experiments/2024_COMCOM/results/exp-32/SF_PCN/: results.csv
experiments/2024_COMCOM/results/exp-32/SH_PCN/: results.csv
experiments/2024_COMCOM/results/exp-33/SF_PCN/: results.csv
experiments/2024_COMCOM/results/exp-33/SH_PCN/: results.csv
experiments/2024_COMCOM/results/exp-34/SF_PCN/: results.csv
experiments/2024_COMCOM/results/exp-34/SH_PCN/: results.csv
experiments/2024_DLT/: DLT24.ipynb  README.md
experiments/2025_COMCOM/: .gitignore  COMCOM.ipynb  COMCOM25.ipynb  COMCOM25.py  README.md  download-experiments-results.sh  run_experiments.py  search-full-simulations.sh  utils.py
src/: main.c
src/features/: htlc.c  htlc.h  network.c  network.h  payments.c  payments.h  routing.c  routing.h  submarine_swaps.c  submarine_swaps.h
src/model/: blockchain.c  blockchain.h  event_trace.c  event_trace.h  global.c  global.h  load.c  load.h  mapping.c  message.c  message.h  pcn_node.c  pcn_node.h
src/utils/: array.c  array.h  hash_table.c  hash_table.h  heap.c  heap.h  list.c  list.h  logging.c  logging.h  utils.c  utils.h
utilities/: Makefile  metis.diff  mypy.ini  pyproject.toml  ruff.toml
utilities/experiments_runner/: __init__.py
utilities/plasma_network_generator/: __init__.py  __main__.py  cloth_dump.py  core.py  dump.py  exceptions.py  generation.py  kcut.py  model.py  params.py  rnd.py  utils.py
utilities/plasma_network_generator/commands/: __init__.py  generate_all.py  generate_capacity_files.py  networkx_generator.py
utilities/statistics_analyzer/: __init__.py  __main__.py  blockchain.py  core.py  exceptions.py  utils.py
utilities/statistics_analyzer/commands/: __init__.py  analyzer.py  plot.py
